--- a/text.html
+++ b/text.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title Page</title>
+        <title>Title Page 2.0</title>
         <link rel="stylesheet" href="css/estilo.css"/>
     </head>
     <body>
