added a new pharagraf

--- a/text.html
+++ b/text.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Title Page web training</h1>
         <p>Este es el contenido de esta prueba de sitio web</p>
+        <p> Otro parrafo para modificar la pagina web.</p>
     </body>
 </html>
